# doCNA

./: Chromosome.py  Consts.py  Distribution.py  Genome.py  Plots.py  README.md  Report.py  Run.py  Segment.py  Testing.py  WGS.py  __main__.py  doCNA.ini  doCNA.py  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
doCNA/: Chromosome.py  Consts.py  Distribution.py  Genome.py  Models.py  Report.py  Run.py  Scoring.py  Segment.py  Testing.py  WGS.py  __main__.py  doCNA.ini
doCNA/viewer/: Models.py  Plots.py  app.py  safe_keep.py
tests/: test_import.py
viewer/: Plots.py  app.py
